--- a/MulticastPackingComputations.ipynb
+++ b/MulticastPackingComputations.ipynb
@@ -25,13 +25,15 @@
     "import scipy\n",
     "from scipy.optimize import newton\n",
     "from scipy.optimize import root_scalar\n",
-    "import sympy"
+    "import sympy\n",
+    "from abc import ABC, abstractmethod"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "cd10f2ef-5d60-446f-a349-1e702c3dcf81",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -42,6 +44,7 @@
    "cell_type": "markdown",
    "id": "a34056aa-f2e2-420e-98a4-cd3c76f94820",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -66,6 +69,7 @@
    "cell_type": "markdown",
    "id": "62583b61-edf5-4ac7-9470-fe9bd2c7db39",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -96,6 +100,7 @@
    "cell_type": "markdown",
    "id": "8f7e88bc-8c97-485d-9b2d-cf75d8298e4b",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -294,6 +299,7 @@
    "cell_type": "markdown",
    "id": "f26821fc-8a4b-4764-8cdf-b0602661bad9",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -347,7 +353,17 @@
     "tags": []
    },
    "source": [
-    "# Main Solver"
+    "# Solvers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cb03264-8b2d-49f3-8d31-71ec3fbd91fa",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Abstract Solver Class"
    ]
   },
   {
@@ -357,13 +373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MulticastPackingSolver:\n",
-    "    \n",
-    "    # Specialized part of the algo. Should be removed\n",
-    "    def optimizeReducedLP(self):\n",
-    "        self.reduced_LP.optimize()\n",
-    "        return self.reduced_LP.getVars() # We need to think about how to represent solutions\n",
-    "    \n",
+    "class MulticastPackingSolver(ABC):\n",
     "    \n",
     "    # Constructor\n",
     "    def __init__(self, instance=None, block_solver=None):\n",
@@ -377,7 +387,6 @@
     "        if block_solver == None:\n",
     "            block_solver = MulticastPackingColumnGenerator(self.instance, self.reduced_LP)\n",
     "        self.column_generator = block_solver\n",
-    "        self.get_next_solution = self.optimizeReducedLP\n",
     "        \n",
     "        # Attributes that track things\n",
     "        self.tol = TOLERANCE\n",
@@ -394,36 +403,31 @@
     "            print(reduced_LP.getA().toarray())\n",
     "            print(reduced_LP.getAttr(\"RHS\"))\n",
     "    \n",
-    "    # Methods for generating values of functions needed by the solver\n",
+    "    # Abstract methods for generating values of functions needed by the solver\n",
     "    \n",
+    "    @abstractmethod\n",
+    "    def get_next_solution(self):\n",
+    "        pass\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def perform_checks_and_updates(self):\n",
+    "        pass\n",
+    "    \n",
+    "    @abstractmethod\n",
     "    def generate_lamb(self, x):\n",
-    "        self.objVal[x] = self.reduced_LP.getObjective().getValue()\n",
-    "        # Doesn't work if x is not current LP solution\n",
+    "        pass\n",
     "    \n",
+    "    @abstractmethod\n",
     "    def generate_fVal(self, x):\n",
-    "        self.fVal[x] = dict()\n",
-    "        for e in self.instance.graph.edges():\n",
-    "            self.fVal[x][e] = self.lamb(x) + self.reduced_LP.getConstrByName(\"{} congestion\".format(sorted(e))).getAttr(gp.GRB.Attr.Slack) # Note: Gurobi signs their slacks stupidly\n",
-    "        \n",
+    "        pass\n",
+    "     \n",
+    "    @abstractmethod   \n",
     "    def generate_p(self, x, t=0):\n",
-    "        self.price[x] = dict()\n",
-    "        for e in self.instance.graph.edges():\n",
-    "            self.price[x][e] = self.reduced_LP.getConstrByName(\"{} congestion\".format(sorted(e))).getAttr(gp.GRB.Attr.Pi)\n",
-    "            if (self.price[x][e] < 0):\n",
-    "                print(\"WHAT IS HAPPENING?\")\n",
-    "                print(self.iteration)\n",
-    "                print(\"lambda(x): {}\".format(self.lamb(x)))\n",
-    "                print(\"log lambda(x): {}\".format(log(self.lamb(x))))\n",
-    "                print(\"tolerance: {}\".format(self.toleranceFunction()))\n",
-    "                print(\"f(x): {}\".format(self.f(x)))\n",
-    "                print(\"p(x): {}\".format(self.p(x)))\n",
-    "                print(\"q(x): {}\".format(self.q(x)))\n",
-    "        nx.set_edge_attributes(self.instance.graph, self.price[x], \"weight\") # I don't think this is how this should be done.\n",
+    "        pass\n",
     "    \n",
+    "    @abstractmethod\n",
     "    def generate_q(self, x, t=0):\n",
-    "        self.multicast_costs[x] = [None] * len(self.instance.requests)\n",
-    "        for i in range(self.instance.num_requests):\n",
-    "            self.multicast_costs[x][i] = self.reduced_LP.getConstrByName(\"Tree Selection for {}\".format(i)).getAttr(gp.GRB.Attr.Pi)\n",
+    "        pass\n",
     "    \n",
     "    # Methods for accessing values of functions needed by the solver\n",
     "    \n",
@@ -468,7 +472,7 @@
     "        pf = dict_innerProd(self.p(x), self.f(x))\n",
     "        pf_prime = dict_innerProd(self.p(x), f_prime)\n",
     "        return (pf-pf_prime)/(pf+pf_prime)\n",
-    "            \n",
+    "    \n",
     "    # Main Function\n",
     "    def perform_iteration(self):\n",
     "        x  = tuple(self.get_next_solution())\n",
@@ -479,11 +483,7 @@
     "        self.generate_q(x)\n",
     "        self.new_trees = self.column_generator.generate_new_trees()\n",
     "            \n",
-    "        if ( (sum([cost(self.new_trees[i]) for i in range(self.instance.num_requests)]) >= self.lamb(x))\n",
-    "        or (all([cost(self.new_trees[i]) - self.q(x)[i] >= 0 for i in range(self.instance.num_requests)]))\n",
-    "        or (self.toleranceFunction() <= self.tol) ):\n",
-    "            self.stop_flag = True\n",
-    "            # Could have different stop flags for different stopping criteria\n",
+    "        self.perform_checks_and_updates(x)\n",
     "        \n",
     "        if DEBUG_LEVEL >= DEBUG_LEVEL_THEORY_1:\n",
     "            print(self.iteration)\n",
@@ -492,6 +492,71 @@
     "            print(\"tolerance: {}\".format(self.toleranceFunction()))\n",
     "            \n",
     "        self.iteration += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d87c859d-3d6b-4201-8e65-e4475bac7e12",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Pure Column Generation Solver Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d08d2954-ef5f-4283-9066-997203df81d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PureColGenMcpSolver(MulticastPackingSolver):\n",
+    "    # Constructor\n",
+    "    def __init__(self, instance=None, block_solver=None):\n",
+    "        super().__init__(instance, block_solver)\n",
+    "    \n",
+    "    \n",
+    "    def get_next_solution(self):\n",
+    "        self.reduced_LP.optimize()\n",
+    "        return self.reduced_LP.getVars() # We need to think about how to represent solutions\n",
+    "    \n",
+    "    def perform_checks_and_updates(self, x):\n",
+    "        if ( (sum([cost(self.new_trees[i]) for i in range(self.instance.num_requests)]) >= self.lamb(x))\n",
+    "            or (all([cost(self.new_trees[i]) - self.q(x)[i] >= 0 for i in range(self.instance.num_requests)]))\n",
+    "            or (self.toleranceFunction() <= self.tol) ):\n",
+    "                self.stop_flag = True\n",
+    "                # Could have different stop flags for different stopping criteria\n",
+    "    \n",
+    "    def generate_lamb(self, x):\n",
+    "        self.objVal[x] = self.reduced_LP.getObjective().getValue()\n",
+    "        # Doesn't work if x is not current LP solution\n",
+    "    \n",
+    "    def generate_fVal(self, x):\n",
+    "        self.fVal[x] = dict()\n",
+    "        for e in self.instance.graph.edges():\n",
+    "            self.fVal[x][e] = self.lamb(x) + self.reduced_LP.getConstrByName(\"{} congestion\".format(sorted(e))).getAttr(gp.GRB.Attr.Slack) # Note: Gurobi signs their slacks stupidly\n",
+    "        \n",
+    "    def generate_p(self, x, t=0):\n",
+    "        self.price[x] = dict()\n",
+    "        for e in self.instance.graph.edges():\n",
+    "            self.price[x][e] = self.reduced_LP.getConstrByName(\"{} congestion\".format(sorted(e))).getAttr(gp.GRB.Attr.Pi)\n",
+    "            if (self.price[x][e] < 0):\n",
+    "                print(\"WHAT IS HAPPENING?\")\n",
+    "                print(self.iteration)\n",
+    "                print(\"lambda(x): {}\".format(self.lamb(x)))\n",
+    "                print(\"log lambda(x): {}\".format(log(self.lamb(x))))\n",
+    "                print(\"tolerance: {}\".format(self.toleranceFunction()))\n",
+    "                print(\"f(x): {}\".format(self.f(x)))\n",
+    "                print(\"p(x): {}\".format(self.p(x)))\n",
+    "                print(\"q(x): {}\".format(self.q(x)))\n",
+    "        nx.set_edge_attributes(self.instance.graph, self.price[x], \"weight\") # I don't think this is how this should be done.\n",
+    "    \n",
+    "    def generate_q(self, x, t=0):\n",
+    "        self.multicast_costs[x] = [None] * len(self.instance.requests)\n",
+    "        for i in range(self.instance.num_requests):\n",
+    "            self.multicast_costs[x][i] = self.reduced_LP.getConstrByName(\"Tree Selection for {}\".format(i)).getAttr(gp.GRB.Attr.Pi)"
    ]
   },
   {
@@ -560,6 +625,7 @@
    "cell_type": "markdown",
    "id": "4ec470be-3fa7-4c7e-915e-41b926677274",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -575,7 +641,7 @@
    "source": [
     "for i in range(1):\n",
     "    print(\"BEGIN NEW TEST\")\n",
-    "    solver = MulticastPackingSolver()\n",
+    "    solver = PureColGenMcpSolver()\n",
     "    while(not solver.stop_flag):\n",
     "        solver.perform_iteration()\n",
     "    \n",
