--- a/MulticastPackingComputations.ipynb
+++ b/MulticastPackingComputations.ipynb
@@ -36,6 +36,7 @@
    "cell_type": "markdown",
    "id": "cd10f2ef-5d60-446f-a349-1e702c3dcf81",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -85,13 +86,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEBUG_LEVEL = DEBUG_LEVEL_THEORY_2\n",
+    "DEBUG_LEVEL = DEBUG_LEVEL_THEORY_1\n",
     "NUM_NODES = 10\n",
     "NUM_EDGES = 15\n",
     "DEGREE = 3\n",
     "NUM_MULTICAST_REQUESTS = 5\n",
     "MAX_MULTICAST_SIZE = NUM_NODES//5\n",
-    "TOLERANCE = 0.1\n",
+    "TOLERANCE = 0.3\n",
     "\n",
     "NATURAL = 0\n",
     "UNIFORM = 1\n",
@@ -118,6 +119,13 @@
    },
    "outputs": [],
    "source": [
+    "def cost(G, prices):\n",
+    "    original_weights = nx.get_edge_attributes(G, \"weight\") \n",
+    "    nx.set_edge_attributes(G, prices, \"weight\")\n",
+    "    retval = sum(nx.get_edge_attributes(G, \"weight\").values())\n",
+    "    nx.set_edge_attributes(G, original_weights, \"weight\")\n",
+    "    return retval\n",
+    "\n",
     "def dict_innerProd(x, y):\n",
     "    assert x.keys() == y.keys()\n",
     "    return sum(x[key]*y[key] for key in x.keys())\n",
@@ -234,11 +242,21 @@
    "cell_type": "markdown",
    "id": "f26821fc-8a4b-4764-8cdf-b0602661bad9",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
     "# Column Generating Subproblem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53a8ac12-6bc7-491f-a7e4-ddcf8ca8b9e6",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Abstract Column Generator"
    ]
   },
   {
@@ -248,23 +266,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cost(G):\n",
-    "        assert nx.is_weighted(G)\n",
-    "        return sum (nx.get_edge_attributes(G, \"weight\").values())\n",
-    "\n",
-    "class MulticastPackingColumnGenerator:\n",
+    "class MulticastPackingColumnGenerator(ABC):\n",
     "    def __init__(self, instance, reduced_LP):\n",
     "        self.instance = instance\n",
     "        self.reduced_LP = reduced_LP\n",
     "        self.Gurobi_variables = [dict() for i in range(self.instance.num_requests)]\n",
-    "        self.generate_tree = lambda i: nx.algorithms.approximation.steinertree.steiner_tree(self.instance.graph, self.instance.requests[i].multicast_group())\n",
     "        \n",
+    "    @abstractmethod\n",
+    "    def generate_tree(self, i, prices):\n",
+    "        pass\n",
+    "    \n",
     "    def generate_new_trees(self, prices=1):\n",
-    "        nx.set_edge_attributes(self.instance.graph, prices, \"weight\")\n",
     "        new_trees = list()\n",
     "        assert nx.is_weighted(self.instance.graph)\n",
     "        for i in range(self.instance.num_requests):\n",
-    "            new_tree = self.generate_tree(i)\n",
+    "            new_tree = self.generate_tree(i, prices)\n",
     "            new_trees.append(new_tree)\n",
     "            \n",
     "            coeffs = list()\n",
@@ -272,12 +288,17 @@
     "            # the new tree contributes to the constraint for each of its edges\n",
     "            for e in new_tree.edges():\n",
     "                coeffs.append(-1)\n",
-    "                constrs.append(self.reduced_LP.getConstrByName(\"{} congestion\".format(sorted(e))))\n",
+    "                constrs.append(self.reduced_LP.getConstrByName(\n",
+    "                    \"{} congestion\".format(sorted(e))))\n",
     "            \n",
-    "            # the new tree contributes to the selection constraint for the corresponding multicast request\n",
+    "            # the new tree contributes to the selection constraint \n",
+    "            # for the corresponding multicast request\n",
     "            coeffs.append(1)\n",
-    "            constrs.append(self.reduced_LP.getConstrByName(\"Tree Selection for {}\".format(i)))\n",
-    "            self.Gurobi_variables[i][new_tree] = self.reduced_LP.addVar(name=\"x({}, {})\".format(i, nx.info(new_tree)), column=gp.Column(coeffs, constrs))\n",
+    "            constrs.append(self.reduced_LP.getConstrByName(\n",
+    "                \"Tree Selection for {}\".format(i)))\n",
+    "            self.Gurobi_variables[i][new_tree] = self.reduced_LP.addVar(\n",
+    "                name=\"x({}, {})\".format(i, nx.info(new_tree)), \n",
+    "                column=gp.Column(coeffs, constrs))\n",
     "            self.reduced_LP.update()\n",
     "            \n",
     "        return new_trees"
@@ -285,8 +306,68 @@
   },
   {
    "cell_type": "markdown",
+   "id": "98ac2df2-f716-49e1-941a-0017a2e237e7",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Simple 2-Approximate Steiner Tree Column Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b560a10f-a7d0-4eb1-9e84-a761970c56c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Approx2MulticastPackingColumnGenerator(MulticastPackingColumnGenerator):\n",
+    "    def generate_tree(self, i, prices):\n",
+    "        original_weights = nx.get_edge_attributes(self.instance.graph, \"weight\") \n",
+    "        nx.set_edge_attributes(self.instance.graph, prices, \"weight\")\n",
+    "        retval = nx.algorithms.approximation.steinertree.steiner_tree(\n",
+    "            self.instance.graph, self.instance.requests[i].multicast_group())\n",
+    "        nx.set_edge_attributes(self.instance.graph, original_weights, \"weight\")\n",
+    "        return retval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f9a95c7-6652-455c-b35c-6f1c51e7c4b6",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Steiner Tree IP Solving Column Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f14c130-b52f-4d74-99a8-2dc2f0ce7b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ExactMulticastPackingColumnGeneratorIP(MulticastPackingColumnGenerator):\n",
+    "    SteinerTreeIP = gp.Model(\"Steiner Tree IP\")\n",
+    "    \n",
+    "    \n",
+    "    def generate_tree(self, i, prices):\n",
+    "        original_weights = nx.get_edge_attributes(self.instance.graph, \"weight\") \n",
+    "        nx.set_edge_attributes(self.instance.graph, prices, \"weight\")\n",
+    "        retval = nx.algorithms.approximation.steinertree.steiner_tree(\n",
+    "            self.instance.graph, self.instance.requests[i].multicast_group())\n",
+    "        nx.set_edge_attributes(self.instance.graph, original_weights, \"weight\")\n",
+    "        return retval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6298cf3d-ad88-4128-b4cb-23823f79cff2",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -323,7 +404,7 @@
     "        \n",
     "        # Attributes related to how this solver generates columns and solutions\n",
     "        if block_solver == None:\n",
-    "            block_solver = MulticastPackingColumnGenerator(self.instance, self.reduced_LP)\n",
+    "            block_solver = Approx2MulticastPackingColumnGenerator(self.instance, self.reduced_LP)\n",
     "        self.column_generator = block_solver\n",
     "        \n",
     "        # Attributes that track things\n",
@@ -420,7 +501,13 @@
     "        self.new_trees = self.column_generator.generate_new_trees(self.p(x, t))\n",
     "        self.perform_checks_and_updates(x)\n",
     "        \n",
-    "        if DEBUG_LEVEL >= DEBUG_LEVEL_THEORY_1:\n",
+    "        if DEBUG_LEVEL >= DEBUG_LEVEL_THEORY_2:\n",
+    "            print(self.iteration)\n",
+    "            print(\"lambda(x): {}\".format(self.lamb(x)))\n",
+    "            print(\"phi_t(x): {}\".format(self.phi(x,t)))\n",
+    "            print(\"tolerance: {}\".format(self.toleranceFunction()))\n",
+    "        \n",
+    "        if DEBUG_LEVEL >= DEBUG_LEVEL_THEORY_1 and (self.iteration % 100 == 0 or self.stop_flag):\n",
     "            print(self.iteration)\n",
     "            print(\"lambda(x): {}\".format(self.lamb(x)))\n",
     "            print(\"phi_t(x): {}\".format(self.phi(x,t)))\n",
@@ -449,8 +536,8 @@
    "source": [
     "class PureColGenMcpSolver(MulticastPackingSolver):\n",
     "    # Constructor\n",
-    "    def __init__(self, instance=None, block_solver=None):\n",
-    "        super().__init__(instance, block_solver)\n",
+    "    #def __init__(self, instance=None, block_solver=None):\n",
+    "        #super().__init__(instance, block_solver)\n",
     "    \n",
     "    \n",
     "    def get_next_solution(self):\n",
@@ -472,8 +559,8 @@
     "        return x\n",
     "    \n",
     "    def perform_checks_and_updates(self, x):\n",
-    "        if ( (sum([cost(self.new_trees[i]) for i in range(self.instance.num_requests)]) >= self.lamb(x))\n",
-    "            or (all([cost(self.new_trees[i]) - self.q(x)[i] >= 0 for i in range(self.instance.num_requests)]))\n",
+    "        if ( (sum([cost(self.new_trees[i], self.p(x)) for i in range(self.instance.num_requests)]) >= self.lamb(x))\n",
+    "            or (all([cost(self.new_trees[i], self.p(x)) - self.q(x)[i] >= 0 for i in range(self.instance.num_requests)]))\n",
     "            or (self.toleranceFunction() <= self.tol) ):\n",
     "                self.stop_flag = True\n",
     "                # Could have different stop flags for different stopping criteria\n",
@@ -746,21 +833,21 @@
     "def test_subproblem(num_tests):\n",
     "    instance = MulticastPackingInstance(NUM_MULTICAST_REQUESTS, MAX_MULTICAST_SIZE)\n",
     "    reduced_LP = create_LP(instance.graph, instance.requests)\n",
-    "    column_generator = MulticastPackingColumnGenerator(instance, reduced_LP)\n",
+    "    column_generator = Approx2MulticastPackingColumnGenerator(instance, reduced_LP)\n",
     "    \n",
     "    new_trees = column_generator.generate_new_trees()\n",
     "    assert (len(new_trees) == instance.num_requests)\n",
     "    for tree in new_trees:\n",
-    "        assert(cost(tree) == len(tree.edges()))\n",
+    "        assert cost(tree, 1) == len(tree.edges()), \"cost: {} edges: {}\".format(cost(tree, 1), len(tree.edges()))\n",
     "           \n",
-    "    assert(len(reduced_LP.getVars()) == 1+instance.num_requests)\n",
+    "    assert len(reduced_LP.getVars()) == 1+instance.num_requests\n",
     "    \n",
     "def run_tests(num_tests):\n",
     "    test_instance_generation(num_tests)\n",
     "    test_LP_creation(num_tests)\n",
     "    test_subproblem(num_tests)\n",
     "\n",
-    "NUM_TESTS = 100\n",
+    "NUM_TESTS = 1\n",
     "run_tests(NUM_TESTS)"
    ]
   },
@@ -799,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2970c1bf-26c5-4d41-8274-413205b14ca1",
+   "id": "2add5212-cf46-4e33-bad9-59990cd55236",
    "metadata": {},
    "outputs": [],
    "source": []
