--- a/MulticastPackingComputations.ipynb
+++ b/MulticastPackingComputations.ipynb
@@ -38,6 +38,7 @@
    "cell_type": "markdown",
    "id": "cd10f2ef-5d60-446f-a349-1e702c3dcf81",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -356,30 +357,83 @@
     "        super().__init__(instance, reduced_LP)\n",
     "        self.GurobiModels = list()\n",
     "        self.variables = list()\n",
+    "        D = nx.DiGraph(instance.graph)\n",
     "        for i in range(instance.num_requests):\n",
-    "            model = gp.Model(\"Steiner Tree IP for Request {}\".format(i))\n",
-    "            variables = {tuple(sorted(e)) : model.addVar(vtype=gp.GRB.BINARY)\n",
-    "                         for e in instance.graph.edges()}\n",
+    "            source = instance.requests[i].source\n",
+    "            recipients = instance.requests[i].recipients\n",
     "            \n",
+    "            model = gp.Model(\"Steiner Tree IP (MCF) for Request {}\".format(i))\n",
+    "            # Add variables\n",
+    "            x = {e : model.addVar(vtype=gp.GRB.BINARY, \n",
+    "                                  name=\"{} selection\".format(e)) \n",
+    "                     for e in D.edges()}\n",
+    "            f = {r : {e: model.addVar(vtype=gp.GRB.BINARY, \n",
+    "                                      name=\"{} flow to {}\".format(e,r)) \n",
+    "                          for e in D.edges()} \n",
+    "                     for r in recipients}\n",
     "            \n",
+    "            # Add constraints\n",
+    "            for r in recipients:\n",
+    "                for v in D.nodes():\n",
+    "                    inflow = sum(f[r][(u,v)] for u in D.predecessors(v))\n",
+    "                    outflow = sum(f[r][(v,w)] for w in D.successors(v))\n",
+    "                    if v == source:\n",
+    "                        netflow = -1\n",
+    "                    elif v == r:\n",
+    "                        netflow = 1\n",
+    "                    else:\n",
+    "                        netflow = 0\n",
+    "                    \n",
+    "                    model.addConstr(inflow - outflow == netflow,\n",
+    "                                    name=\"{}-flow conservation for {}\".format(r,v))\n",
+    "                \n",
+    "                for e in D.edges():\n",
+    "                    model.addConstr(f[r][e] <= x[e],\n",
+    "                                    name=\"{} availability for {}-flow\".format(e,r))\n",
     "            \n",
-    "        self.variables.append(variables)\n",
-    "        self.GurobiModels.append(model)\n",
+    "            # Note we don't add the objective as that is determined by\n",
+    "            # the prices in each iteration.\n",
+    "            model.update()\n",
+    "            \n",
+    "            self.variables.append((x,f))\n",
+    "            self.GurobiModels.append(model)\n",
     "    \n",
     "    \n",
     "    def generate_tree(self, i, prices):\n",
-    "        original_weights = nx.get_edge_attributes(self.instance.graph, \"weight\") \n",
-    "        nx.set_edge_attributes(self.instance.graph, prices, \"weight\")\n",
-    "        retval = nx.algorithms.approximation.steinertree.steiner_tree(\n",
-    "            self.instance.graph, self.instance.requests[i].multicast_group())\n",
-    "        nx.set_edge_attributes(self.instance.graph, original_weights, \"weight\")\n",
-    "        return retval"
+    "        model = self.GurobiModels[i]\n",
+    "        x = self.variables[i][0]\n",
+    "        c = dict()\n",
+    "        \n",
+    "        if isinstance(prices, dict):\n",
+    "            for e in x:\n",
+    "                if e in prices:\n",
+    "                    c[e] = prices[e]\n",
+    "                elif tuple(reversed(e)) in prices:\n",
+    "                    c[e] = prices[tuple(reversed(e))]\n",
+    "                else:\n",
+    "                    raise KeyError('Edge not in prices?!')\n",
+    "        else: # should be a constant numeric value\n",
+    "            for e in x:\n",
+    "                c[e] = prices\n",
+    "                    \n",
+    "        \n",
+    "        model.setObjective(sum(c[e]*x[e] for e in x), gp.GRB.MINIMIZE)\n",
+    "        model.update()\n",
+    "        model.optimize()\n",
+    "        \n",
+    "        steinerTree = list()\n",
+    "        for e in self.instance.graph.edges():\n",
+    "            if (x[e].X == 1) or (x[tuple(reversed(e))].X == 1):\n",
+    "                steinerTree.append(e)\n",
+    "        \n",
+    "        return self.instance.graph.edge_subgraph(steinerTree)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6298cf3d-ad88-4128-b4cb-23823f79cff2",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -417,6 +471,8 @@
     "        # Attributes related to how this solver generates columns and solutions\n",
     "        if block_solver == None:\n",
     "            block_solver = Approx2MulticastPackingColumnGenerator(self.instance, self.reduced_LP)\n",
+    "        if block_solver == \"Exact\":\n",
+    "            block_solver = ExactMulticastPackingColumnGeneratorIP(self.instance, self.reduced_LP)\n",
     "        self.column_generator = block_solver\n",
     "        \n",
     "        # Attributes that track things\n",
@@ -547,11 +603,6 @@
    "outputs": [],
    "source": [
     "class PureColGenMcpSolver(MulticastPackingSolver):\n",
-    "    # Constructor\n",
-    "    #def __init__(self, instance=None, block_solver=None):\n",
-    "        #super().__init__(instance, block_solver)\n",
-    "    \n",
-    "    \n",
     "    def get_next_solution(self):\n",
     "        self.reduced_LP.optimize()\n",
     "        x = [dict() for i in range(self.instance.num_requests)]\n",
@@ -867,6 +918,7 @@
    "cell_type": "markdown",
    "id": "4ec470be-3fa7-4c7e-915e-41b926677274",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -884,7 +936,7 @@
     "for i in range(1):\n",
     "    print(\"BEGIN NEW TEST\")\n",
     "    instance = MulticastPackingInstance(NUM_MULTICAST_REQUESTS, MAX_MULTICAST_SIZE)\n",
-    "    print(\"Column Generation\")\n",
+    "    print(\"Column Generation - 2-approx\")\n",
     "    CGsolver = PureColGenMcpSolver(instance=instance)\n",
     "    CGtimer = list()\n",
     "    while(not CGsolver.stop_flag):\n",
@@ -893,8 +945,21 @@
     "        new_time = time.perf_counter()\n",
     "        CGtimer.append(new_time - prev_time)\n",
     "    print()\n",
-    "    print(\"Average Time of Pure Column Generation Iteration: {}\".format(mean(CGtimer)))\n",
+    "    print(\"Average Time of Pure Column Generation Iteration with 2-approx block solver: {}\".format(mean(CGtimer)))\n",
     "    print()\n",
+    "    \n",
+    "    print(\"Column Generation - Exact\")\n",
+    "    CGsolver2 = PureColGenMcpSolver(instance=instance, block_solver=\"Exact\")\n",
+    "    CGtimer2 = list()\n",
+    "    while(not CGsolver2.stop_flag):\n",
+    "        prev_time = time.perf_counter()\n",
+    "        CGsolver2.perform_iteration()\n",
+    "        new_time = time.perf_counter()\n",
+    "        CGtimer2.append(new_time - prev_time)\n",
+    "    print()\n",
+    "    print(\"Average Time of Pure Column Generation Iteration with an exact block solver: {}\".format(mean(CGtimer2)))\n",
+    "    print()\n",
+    "    \n",
     "    print(\"Jansen-Zhang Algorithm\")\n",
     "    JZsolver = JansenZhangMinMaxer(instance=instance)\n",
     "    JZtimer = list()\n",
