--- a/MulticastPackingComputations.ipynb
+++ b/MulticastPackingComputations.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "e735038d-1358-4c06-9b44-28fc1ed8e6e2",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -12,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e5e59500-2ffe-44ef-a2b0-a9b0895dfcce",
    "metadata": {},
    "outputs": [],
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fb5f0a6f-0aa4-48ac-a329-5dc8e2d6e9de",
    "metadata": {},
    "outputs": [],
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "766e0ad8-fa6e-4706-a18e-db5b6db1e819",
    "metadata": {},
    "outputs": [],
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c51ac806-5d86-4925-a965-089895414e23",
    "metadata": {
     "tags": []
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a5e26a27-d4bc-47fc-8704-c071fdd64b44",
    "metadata": {},
    "outputs": [],
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c14efbe3-97bb-49db-adab-8bfb4861d495",
    "metadata": {},
    "outputs": [],
@@ -243,6 +244,7 @@
    "cell_type": "markdown",
    "id": "f26821fc-8a4b-4764-8cdf-b0602661bad9",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8577ef76-10a6-4c6f-9123-6f95e46c8893",
    "metadata": {},
    "outputs": [],
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b560a10f-a7d0-4eb1-9e84-a761970c56c7",
    "metadata": {},
    "outputs": [],
@@ -346,18 +348,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9f14c130-b52f-4d74-99a8-2dc2f0ce7b7e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Set parameter Username\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class ExactMulticastPackingColumnGeneratorIP(MulticastPackingColumnGenerator):\n",
     "    SteinerTreeIP = gp.Model(\"Steiner Tree IP\")\n",
@@ -396,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "8ab0a958-3ef1-494b-a250-149de75f3c89",
    "metadata": {},
    "outputs": [],
@@ -538,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d08d2954-ef5f-4283-9066-997203df81d4",
    "metadata": {},
    "outputs": [],
@@ -607,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "50d91be1-d397-42d3-b196-28640a9c39ab",
    "metadata": {},
    "outputs": [],
@@ -811,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2a5f0cb0-95cf-4bdb-8c94-b15086c08ff5",
    "metadata": {},
    "outputs": [],
@@ -864,6 +858,7 @@
    "cell_type": "markdown",
    "id": "4ec470be-3fa7-4c7e-915e-41b926677274",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -872,74 +867,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "921b188f-6b08-4c17-8291-93590181f8e4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BEGIN NEW TEST\n",
-      "Column Generation\n",
-      "0\n",
-      "lambda(x): 3.0\n",
-      "phi_t(x): 1.0986122886681098\n",
-      "tolerance: 1.0\n",
-      "3\n",
-      "lambda(x): 1.3333333333333333\n",
-      "phi_t(x): 0.28768207245178085\n",
-      "tolerance: 0.0\n",
-      "\n",
-      "Average Time of Pure Column Generation Iteration: 0.006387174999999745\n",
-      "\n",
-      "Jansen-Zhang Algorithm\n",
-      "0\n",
-      "lambda(x): 3.0\n",
-      "phi_t(x): 0.995441568851455\n",
-      "tolerance: 0.947375567855227\n",
-      "100\n",
-      "lambda(x): 2.28429565716694\n",
-      "phi_t(x): 0.810671251912784\n",
-      "tolerance: 0.908571556737612\n",
-      "200\n",
-      "lambda(x): 1.78268918805972\n",
-      "phi_t(x): 0.598845769846711\n",
-      "tolerance: 0.825850269618535\n",
-      "300\n",
-      "lambda(x): 1.46974210062367\n",
-      "phi_t(x): 0.44867704580668\n",
-      "tolerance: 0.591598133800076\n",
-      "400\n",
-      "lambda(x): 1.3558560787338\n",
-      "phi_t(x): 0.405075039269993\n",
-      "tolerance: 0.154078004028599\n",
-      "500\n",
-      "lambda(x): 1.33685885213995\n",
-      "phi_t(x): 0.353145287474997\n",
-      "tolerance: 0.0515519138820023\n",
-      "510\n",
-      "lambda(x): 1.33638143854908\n",
-      "phi_t(x): 0.353115310602279\n",
-      "tolerance: 0.0414147773683872\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "StatisticsError",
-     "evalue": "fmean requires at least one data point",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mStatisticsError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_28700/4285023573.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[0mCGtimer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_time\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mprev_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Average Time of Jansen-Zhang Algorithm Iteration: {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mJZtimer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\Lib\\statistics.py\u001b[0m in \u001b[0;36mfmean\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    343\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mtotal\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    344\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mZeroDivisionError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 345\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mStatisticsError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'fmean requires at least one data point'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    346\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    347\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mStatisticsError\u001b[0m: fmean requires at least one data point"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "for i in range(1):\n",
     "    print(\"BEGIN NEW TEST\")\n",
     "    instance = MulticastPackingInstance(NUM_MULTICAST_REQUESTS, MAX_MULTICAST_SIZE)\n",
@@ -965,6 +897,65 @@
     "    print()\n",
     "    print(\"Average Time of Jansen-Zhang Algorithm Iteration: {}\".format(mean(JZtimer)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "108f02ff-b4ea-4ace-bfc4-62fc640b79dd",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Rounding Algorithms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c3a46d2-79b4-4b31-96e5-43095d98b649",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## (Totally) Randomized Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8789b6bc-d18c-42b9-a321-9635d849d964",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def randRoundingHelper(fracSoln):\n",
+    "    randNum = random.random()\n",
+    "    for T in fracSoln:\n",
+    "        randNum -= fracSoln[T]\n",
+    "        if randNum < 0:\n",
+    "            return T\n",
+    "    \n",
+    "    \n",
+    "def randRounding(MCPsolver):\n",
+    "    intSoln = list()\n",
+    "    fracSoln = MCPsolver.solution[MCPsolver.iteration-1]\n",
+    "    for i in range(MCPsolver.instance.num_requests):\n",
+    "        intSoln.append(FrozenDict({randRoundingHelper(fracSoln[i]) : 1}))\n",
+    "        \n",
+    "    return tuple(intSoln)\n",
+    "\n",
+    "roundedCG = randRounding(CGsolver)\n",
+    "roundedJZ = randRounding(JZsolver)\n",
+    "print(JZsolver.lamb(roundedCG))\n",
+    "print(JZsolver.lamb(roundedJZ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ebe4db6-d562-409e-bbc4-a0285a3a84b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -984,7 +975,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.10"
-  }
+  },
+  "toc-autonumbering": false,
+  "toc-showcode": false,
+  "toc-showmarkdowntxt": false,
+  "toc-showtags": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
