--- a/MulticastPackingComputations.ipynb
+++ b/MulticastPackingComputations.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "id": "e735038d-1358-4c06-9b44-28fc1ed8e6e2",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -38,7 +37,6 @@
    "cell_type": "markdown",
    "id": "cd10f2ef-5d60-446f-a349-1e702c3dcf81",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -49,7 +47,6 @@
    "cell_type": "markdown",
    "id": "a34056aa-f2e2-420e-98a4-cd3c76f94820",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -74,7 +71,6 @@
    "cell_type": "markdown",
    "id": "62583b61-edf5-4ac7-9470-fe9bd2c7db39",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -89,10 +85,10 @@
    "outputs": [],
    "source": [
     "DEBUG_LEVEL = DEBUG_LEVEL_THEORY_1\n",
-    "NUM_NODES = 50\n",
-    "NUM_EDGES = 75\n",
+    "NUM_NODES = 100\n",
+    "NUM_EDGES = 150\n",
     "DEGREE = 3\n",
-    "NUM_MULTICAST_REQUESTS = 10\n",
+    "NUM_MULTICAST_REQUESTS = 20\n",
     "MAX_MULTICAST_SIZE = NUM_NODES//5\n",
     "TOLERANCE = 0.3\n",
     "\n",
@@ -105,7 +101,6 @@
    "cell_type": "markdown",
    "id": "8f7e88bc-8c97-485d-9b2d-cf75d8298e4b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -155,7 +150,6 @@
    "cell_type": "markdown",
    "id": "cb5ea106-08a1-47e6-9c13-3302d8ed1e4a",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -210,7 +204,6 @@
    "cell_type": "markdown",
    "id": "ffeb6e0a-d4e8-4924-8b07-4ed69e91ff40",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -244,7 +237,6 @@
    "cell_type": "markdown",
    "id": "f26821fc-8a4b-4764-8cdf-b0602661bad9",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -255,7 +247,6 @@
    "cell_type": "markdown",
    "id": "53a8ac12-6bc7-491f-a7e4-ddcf8ca8b9e6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -311,7 +302,6 @@
    "cell_type": "markdown",
    "id": "98ac2df2-f716-49e1-941a-0017a2e237e7",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -339,7 +329,6 @@
    "cell_type": "markdown",
    "id": "9f9a95c7-6652-455c-b35c-6f1c51e7c4b6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -434,7 +423,6 @@
    "cell_type": "markdown",
    "id": "6298cf3d-ad88-4128-b4cb-23823f79cff2",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -445,7 +433,6 @@
    "cell_type": "markdown",
    "id": "9cb03264-8b2d-49f3-8d31-71ec3fbd91fa",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -589,7 +576,6 @@
    "cell_type": "markdown",
    "id": "d87c859d-3d6b-4201-8e65-e4475bac7e12",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -653,7 +639,6 @@
    "cell_type": "markdown",
    "id": "9595f474-a0cb-4ee0-b950-97a9b54d86f8",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -857,7 +842,6 @@
    "cell_type": "markdown",
    "id": "64f0dcc7-9ebd-4df2-8717-568c1467d85b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -917,9 +901,62 @@
   },
   {
    "cell_type": "markdown",
+   "id": "108f02ff-b4ea-4ace-bfc4-62fc640b79dd",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Rounding Algorithms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c3a46d2-79b4-4b31-96e5-43095d98b649",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## (Totally) Randomized Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8789b6bc-d18c-42b9-a321-9635d849d964",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def randRoundingHelper(fracSoln):\n",
+    "    randNum = random.random()\n",
+    "    for T in fracSoln:\n",
+    "        randNum -= fracSoln[T]\n",
+    "        if randNum < 0:\n",
+    "            return T\n",
+    "    \n",
+    "    \n",
+    "def randRounding(MCPsolver):\n",
+    "    intSoln = list()\n",
+    "    fracSoln = MCPsolver.solution[MCPsolver.iteration-1]\n",
+    "    for i in range(MCPsolver.instance.num_requests):\n",
+    "        intSoln.append(FrozenDict({randRoundingHelper(fracSoln[i]) : 1}))\n",
+    "        \n",
+    "    return tuple(intSoln)\n",
+    "\n",
+    "fracSolnCG = CGsolver.solution[CGsolver.iteration-1]\n",
+    "fracSolnCG2 = CGsolver2.solution[CGsolver2.iteration-1]\n",
+    "#fracSolnJZ = MCPsolver.solution[MCPsolver.iteration-1]\n",
+    "roundedCG = randRounding(CGsolver)\n",
+    "roundedCG2 = randRounding(CGsolver2)\n",
+    "#roundedJZ = randRounding(JZsolver)\n",
+    "print(JZsolver.lamb(roundedCG))\n",
+    "print(JZsolver.lamb(roundedCG2))\n",
+    "#print(JZsolver.lamb(roundedJZ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4ec470be-3fa7-4c7e-915e-41b926677274",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -960,67 +997,16 @@
     "    print(\"Average Time of Pure Column Generation Iteration with an exact block solver: {}\".format(mean(CGtimer2)))\n",
     "    print()\n",
     "    \n",
-    "    print(\"Jansen-Zhang Algorithm\")\n",
+    "    # print(\"Jansen-Zhang Algorithm\")\n",
     "    JZsolver = JansenZhangMinMaxer(instance=instance)\n",
-    "    JZtimer = list()\n",
-    "    while(not JZsolver.stop_flag):\n",
-    "        prev_time = time.perf_counter()\n",
-    "        JZsolver.perform_iteration()\n",
-    "        new_time = time.perf_counter()\n",
-    "        JZtimer.append(new_time - prev_time)\n",
-    "    print()\n",
-    "    print(\"Average Time of Jansen-Zhang Algorithm Iteration: {}\".format(mean(JZtimer)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "108f02ff-b4ea-4ace-bfc4-62fc640b79dd",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "# Rounding Algorithms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0c3a46d2-79b4-4b31-96e5-43095d98b649",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "## (Totally) Randomized Rounding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8789b6bc-d18c-42b9-a321-9635d849d964",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def randRoundingHelper(fracSoln):\n",
-    "    randNum = random.random()\n",
-    "    for T in fracSoln:\n",
-    "        randNum -= fracSoln[T]\n",
-    "        if randNum < 0:\n",
-    "            return T\n",
-    "    \n",
-    "    \n",
-    "def randRounding(MCPsolver):\n",
-    "    intSoln = list()\n",
-    "    fracSoln = MCPsolver.solution[MCPsolver.iteration-1]\n",
-    "    for i in range(MCPsolver.instance.num_requests):\n",
-    "        intSoln.append(FrozenDict({randRoundingHelper(fracSoln[i]) : 1}))\n",
-    "        \n",
-    "    return tuple(intSoln)\n",
-    "\n",
-    "roundedCG = randRounding(CGsolver)\n",
-    "roundedJZ = randRounding(JZsolver)\n",
-    "print(JZsolver.lamb(roundedCG))\n",
-    "print(JZsolver.lamb(roundedJZ))"
+    "    # JZtimer = list()\n",
+    "    # while(not JZsolver.stop_flag):\n",
+    "    #     prev_time = time.perf_counter()\n",
+    "    #     JZsolver.perform_iteration()\n",
+    "    #     new_time = time.perf_counter()\n",
+    "    #     JZtimer.append(new_time - prev_time)\n",
+    "    # print()\n",
+    "    # print(\"Average Time of Jansen-Zhang Algorithm Iteration: {}\".format(mean(JZtimer)))"
    ]
   },
   {
@@ -1029,7 +1015,17 @@
    "id": "3ebe4db6-d562-409e-bbc4-a0285a3a84b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = fracSolnCG\n",
+    "z = roundedCG\n",
+    "for i in range(len(x)):\n",
+    "    for T in z[i]:\n",
+    "        print(T)\n",
+    "        print(z[i][T])\n",
+    "    for T in x[i]:\n",
+    "        print(T)\n",
+    "        print(x[i][T])\n"
+   ]
   }
  ],
  "metadata": {
